# PelicanQ

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  RAFT_AUDIT_FIXES.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_wanted.md
docs/: README.md  architecture.md  clustering.md  deployment-tiers.md  mqtt.md  roadmap.md
docs/architecture/: delivery-semantics.md  grpc-streaming.md  overview.md  retention.md  storage.md
docs/deployment/: configuration.md  flock.md  solo.md
docs/development/: building.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: batch-operations.md  dead-letter-queues.md  deduplication.md  mqtt.md  priority-queues.md  publish-consume.md  scheduled-messages.md
docs/reference/: grpc-api.md  http-api.md  proto-spec.md  sdk-go.md  sdk-java.md  sdk-node.md  sdk-python.md  sdk-rust.md
examples/go-publish-consume/: main.go
examples/java-publish-consume/: pom.xml
examples/java-publish-consume/src/main/java/: Main.java
examples/node-publish-consume/: index.ts
examples/python-publish-consume/: main.py
examples/rust-publish-consume/: Cargo.toml  main.rs
pelicanq-core/: Cargo.toml
pelicanq-core/src/: error.rs  lib.rs  message.rs  queue.rs  retention.rs  snapshot.rs  storage.rs
pelicanq-core/tests/: queue_hot_path_benchmark.rs
pelicanq-raft/: Cargo.toml
pelicanq-raft/src/: lib.rs  network.rs  requests.rs  state_machine.rs  storage.rs
pelicanq-raft/tests/: three_node.rs
pelicanqd/: Cargo.toml  build.rs
pelicanqd/src/: api.rs  cluster_config.rs  config.rs  lib.rs  main.rs
pelicanqd/src/grpc/: admin_service.rs  mod.rs  queue_service.rs
pelicanqd/src/mqtt/: handler.rs
pelicanqd/tests/: grpc_integration.rs  integration.rs
proto/pelicanq/v1/: admin.proto  message.proto  queue.proto
scripts/: dev-cluster.sh
sdks/go/: README.md  go.mod
sdks/go/pelicanq/: client.go  client_test.go  pelicanq_test.go  types.go
sdks/go/pelicanq/pb/v1/: admin.pb.go  (+4 more)
sdks/java/: README.md  pom.xml
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: client.test.ts  client.ts  index.ts  types.ts
sdks/python/: README.md  pyproject.toml
sdks/python/pelicanq/: __init__.py  client.py  types.py
sdks/python/pelicanq/v1/: admin_pb2.py  admin_pb2_grpc.py  message_pb2.py  message_pb2_grpc.py  queue_pb2.py  queue_pb2_grpc.py
sdks/python/tests/: test_integration.py  test_types.py
sdks/rust/: Cargo.toml  README.md  build.rs
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/rust/tests/: integration.rs
(+7 files in other folders)
