[package]
name = "pelicanq-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
