[package]
name = "pelicanqd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pelicanq-core = { path = "../pelicanq-core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
