[package]
name = "pelicanqd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pelicanq-core = { path = "../pelicanq-core" }
pelicanq-raft = { path = "../pelicanq-raft" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
rumqttc = "0.25"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
temp-env = "0.3"
tonic = "0.11"
