[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pelicanq"
version = "0.1.0"
description = "PelicanQ Python SDK"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.urls]
Home = "https://github.com/anomalyco/pelicanq"
